Subindo tela de Hq

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="registerRegister">Register</string>
     <string name="registerName">Name</string>
     <string name="registerSave">Save</string>
+    <string name="hqNumber">#number</string>
 </resources>
