--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,11 +11,11 @@
     <string name="registerSave">Save</string>
     <string name="hqNumber">#number</string>
     <string name="descriptionTitle">Title HQ</string>
-    <string name="descriptionDescription">Description HQ</string>
+    <string name="descriptionDescription">No description available</string>
     <string name="descriptionPublised">Published:</string>
-    <string name="descriptionData">00/00/0000</string>
+    <string name="descriptionData">No date available</string>
     <string name="descriptionPrice">Price: U$</string>
-    <string name="descriptionValor">00.00</string>
+    <string name="descriptionValor">No price available</string>
     <string name="descriptionPage">Pages:</string>
-    <string name="descriptionInt">000</string>
+    <string name="descriptionInt">No page available</string>
 </resources>
